margin-width-changes2

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                     <h2 class="article-featured-title">
                         A Food, Not to be!
                     </h2>
-                    <img src=".\blog project\img\feat_img.png" alt="" class="article-feat-image" >
+                    <img src="feat_img.png" alt="" class="article-feat-image" >
                     <p class="article-featured-info">
                         27-01-2019
                     </p>
@@ -60,7 +60,7 @@
 
                     </div>
                     <div class="article-recent-secondary">
-                        <img src=".\blog project\img\sing.png"  class="article-image">
+                        <img src="sing.png"  class="article-image">
 
                         
                     </div>
@@ -103,7 +103,7 @@
 
                     </div>
                     <div class="article-recent-secondary">
-                        <img src=".\blog project\img\holi.png" class="article-image">
+                        <img src="holi.png" class="article-image">
  
                     </div>
                 </article>
@@ -117,7 +117,7 @@
                 </div> --> 
                 <div class="sidebar-widget">
                     <div class="author-info">
-                        <img class="author-img" src=".\blog project\img\author.png" >
+                        <img class="author-img" src="author.png" >
                         <h3 class="title author-info-name">
                             Ankush Jayant Hiware
                         </h3>
@@ -149,13 +149,13 @@
                         <h3 class="title widget-title">
                             CHAPTER IV : Forget that you proposed me, and listen…
                         </h3>
-                        <img src=".\blog project\img\chap4.png" alt="" class="widget-image">
+                        <img src="chap4.png" alt="" class="widget-image">
                     </div>
                     <div class="widget-recent-post">
                         <h3 class="title widget-title">
                             Chapter III : Wait, is it she ! But why ?
                         </h3>
-                        <img src=".\blog project\img\chap3.png" alt="" class="widget-image">
+                        <img src="chap3.png" alt="" class="widget-image">
                     </div>
                     <!-- <div class="widget-recent-post">
                         <h3 class="widget-recent-post-title"></h3>
