--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 
                     </div>
                     <div class="article-recent-secondary">
-                        <img src=".\blog project\img\book.png" alt="" class="article-image">
+                        <img src="book.png" alt="" class="article-image">
                        
                         
                     </div>
